log
Thu, Mar 27, 2025 10:06:51 PM: 
 tests:  0|6
total_score: 0/70
25021aa
Thu, Mar 27, 2025 10:08:47 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:34:9: error: 'List {aka struct List}' has no member named 'size'
     list->size = 0;
         ^~
Compilation failed
e228779
Thu, Mar 27, 2025 10:09:21 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
eafea73
Thu, Mar 27, 2025 10:13:06 PM: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
a9608d9
